--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,12 +11,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: corepack enable
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - uses: actions/setup-node@v3
         with:
           node-version: "20"
+          cache: 'pnpm'
       # Pick your own package manager and build script
-      - run: npm install
-      - run: npm run build
+      - run: pnpm install
+      - run: pnpm build
         env:
           TENOR_API: ${{secrets.TENOR_API}}
           NITRO_PRESET: github_pages
