--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dotlottie/player-component": "^2.7.6",
     "@multiavatar/multiavatar": "^1.0.7",
     "@nuxt/image": "^1.3.0",
+    "@studio-freight/lenis": "^1.0.34",
     "dayjs-nuxt": "^2.1.9",
     "markdown-it": "^14.0.0",
     "peerjs": "^1.5.2",
