--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@dotlottie/player-component": "^2.7.6",
     "@multiavatar/multiavatar": "^1.0.7",
     "@nuxt/image": "^1.3.0",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "@splidejs/vue-splide": "^0.6.12",
     "@studio-freight/lenis": "^1.0.34",
     "dayjs-nuxt": "^2.1.9",
     "markdown-it": "^14.0.0",
@@ -39,7 +41,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-vue": "^9.18.1",
-    "nuxt": "^3.9.3",
+    "nuxt": "^3.10.0",
     "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.8",
     "nuxt-lazy-load": "^3.0.4",
